CourseStyle.css
/* ... */
.swiftly .control, .swiftAns .control {
    color: #C586C0;
}

.swiftly .comment {
    color: #6A9955;
}

.swiftAns .comment {
    color: #6Ab955;
}

.swiftly .namespace, .swiftAns .namespace {
    color: #dfdfdf;
}


.swiftly .punctuation, .swiftAns .punctuation {
    color: #dfdfdf;
}

.swiftly .operator, .swiftAns .operator {
    color: #dfdfdf;
}

.swiftly .localName, .swiftAns .localName {
    color: #9CDCFE;
}

.swiftly .parameter, .swiftAns .parameter {
    color: #9CDCFE;
}

.swiftly .code_highlight, .swiftAns .code_highlight {
    background-color: #395929;
}

.swiftly Table, .swiftAns Table {
    margin-top: 0px !important;
    margin-bottom: 0px !important;
    white-space: pre;
}

.swiftly Table, th, td, tr, .swiftAns Table, th, td, tr {
    border: none !important;
    padding: 0px !important;
}

.swiftly .line_no::before {
    content: attr(line_no);
    color: dimgray;
    font-size: 16px;
    width: 0.2em;
}

.swiftAns .line_no::before {
    content: attr(line_no);
    color: cadetblue;
    font-size: 16px;
    width: 0.2em;
}

.swiftly .code_column, .swiftAns .code_column {
    padding-left: 5px;
    color: #dfdfdf;
}
/*#endregion Code Coloring Swiftly nuget*/

